kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-website
spec:
  selector:
    app: wedding-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
